docs(project): 更新项目文档和架构说明
- 在 CLAUDE.md 和 README.md 中添加当前项目阶段说明
- 更新技术栈信息，包括 Java 21 虚拟线程、Maven 4、Vite 6 等版本细节
- 详细描述项目结构和模块依赖关系
- 添加运行环境配置说明和环境变量设置指南
- 补充 Phase 1 实现要点和技术细节
- 更新快速开始步骤和启动命令说明